correção de links

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           >
         </li>
         <li>
-          <a href="#" target="_blank">Currículo</a>
+          <a href="https://www.canva.com/design/DAFwNDymfKg/hiOHuoJIzuSX-4ZO5zvI4Q/view?utm_content=DAFwNDymfKg&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank">Currículo</a>
         </li>
       </ul>
     </div>
@@ -62,16 +62,16 @@
         </form>
     </div>
       <div id="icones">
-        <a href="#" target="_blank">
+        <a href="https://www.linkedin.com/in/tiago-ferreira-84552b270/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a href="https://www.instagram.com/tiagotyr_/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a href="https://github.com/tiagotyr" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a href="https://wa.me/+5581991113276" target="_blank">
           <ion-icon name="logo-whatsapp"></ion-icon>
         </a>
       </div>
