--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tiago Ferreira</title>
     <link rel="stylesheet" href="my.css" />
+    <link rel="shortcut icon" type="imagex/png" href="./image/logo.ico">
   </head>
   <body>
     <div id="container">
